...
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/main_top_bar"/>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/text_first_operand"
                style="@style/myCalc.portraitOperationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:contentDescription="@string/display_first_operand"
...
            <TextView
                android:id="@+id/text_equal"
                style="@style/myCalc.portraitEqualText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_operation_result"
                app:layout_constraintEnd_toStartOf="@+id/text_operation_result"
                app:layout_constraintTop_toTopOf="@+id/text_operation_result" />

            <TextView
                android:id="@+id/text_operation_result"
                style="@style/myCalc.portraitOperationResultText"
...
